{
    "name": "GlobalControls",
    "maps": [
        {
            "name": "Movement",
            "id": "bf09ebdf-90ad-48d6-b700-0bd665097b35",
            "actions": [
                {
                    "name": "Running",
                    "type": "Value",
                    "id": "2d666aa8-da51-4fbf-8c8d-6b940abfc238",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jumping",
                    "type": "Button",
                    "id": "cc30cb8e-4b4d-46c1-8c32-3951fb51a62c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "6daa5467-4ec3-4b6b-b9c8-c720675a1623",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "eb17cd8d-bf81-4b09-b9fb-c69988703eef",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7e505add-f501-4ec7-a8b1-fc26bf7d690a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6cb61d15-8087-47a2-baeb-bc6d6edaaa15",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2547d96b-3c69-4469-bda9-1ddc8bc899b9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0743e577-b479-4e31-91c9-6890f4f97dc1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jumping",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Rotate",
            "id": "44f7f18a-46ed-4258-a36a-29102725e70a",
            "actions": [
                {
                    "name": "SelectDirection",
                    "type": "Value",
                    "id": "3edbaf2e-74fd-4c70-8afd-97f40def9417",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ConfirmRotate",
                    "type": "Button",
                    "id": "20d0088a-cb41-466c-b013-dcf7e10548ac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DisableRotate",
                    "type": "Button",
                    "id": "2edb401e-1acf-4a52-bcaa-ca26660d48e7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ec117910-8202-44f9-8110-c34fe48b81a6",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b57240b-2c05-430d-bcee-de26189bf9ca",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "387685e8-10e1-412a-b540-ce2500fb4f05",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13519011-83d4-4d61-aca5-5bd5850a63b7",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fd8806d-38ca-45c7-b3d7-341f24851684",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f112b494-5181-4ec3-9b39-ad6c3ec042d2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DisableRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pause",
            "id": "7b1fd6ec-d62d-4155-b806-b65c5d0231ec",
            "actions": [
                {
                    "name": "PauseAction",
                    "type": "Button",
                    "id": "75944f80-18b5-48ae-a2d6-67ce24123ea0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bf8ef767-579b-4e24-b3e6-30b8285b65af",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}